The header's desing was made for the mobile device width

--- a/index.html
+++ b/index.html
@@ -11,29 +11,30 @@
 
 <body>
     <header class="header">
-        <nav class="cabecera flex modificador">
-            <div class="logo"><img src="" alt=""></div>
-            <div class="franja"><span class="icon-menu" id="boton_menu"></span></div>
+        <nav class="headboard flex modifier">
+            <div class="logo"><img src="./img/images.png" alt="logo" style="width: 100px;"></div>
+            <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
-                    <a href="" class="link"></a>
+                    <a href="" class="link">Inicio</a>
                 </li>
                 <li class="list">
-                    <a href="" class="link"></a>
+                    <a href="" class="link">Nosotros</a>
                 </li>
                 <li class="list">
-                    <a href="" class="link"></a>
+                    <a href="" class="link">Productos</a>
                 </li>
                 <li class="list">
-                    <a href="" class="link"></a>
+                    <a href="" class="link">Contacto</a>
                 </li>
             </ul>
         </nav>
         <div class="text">
-            <h1 class="title"></h1>
-            <a href="" class="boton"></a>
+            <h1 class="title">Lo mejor <br> esta por llegar</h1>
+            <a href="" class="button">Conocenos</a>
         </div>
     </header>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
