The first section's desing was made for the mobile device width

--- a/index.html
+++ b/index.html
@@ -34,6 +34,32 @@
             <a href="" class="button">Conocenos</a>
         </div>
     </header>
+
+    <main>
+        <section class="featured flex modifier">
+            <h1 class="featured_title">Bienvenido</h1>
+            <div class="promo">
+                <span class="icon-cutlery"></span>
+                <h2 class="title_promo">Comida Saludable</h2>
+                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+            </div>
+            <div class="promo">
+                <span class="icon-asterisk"></span>
+                <h2 class="title_promo">Comida Saludable</h2>
+                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+            </div>
+            <div class="promo">
+                <span class="icon-heart"></span>
+                <h2 class="title_promo">Comida Saludable</h2>
+                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+            </div>
+            <div class="promo">
+                <span class="icon-lightbulb-o"></span>
+                <h2 class="title_promo">Comida Saludable</h2>
+                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+            </div>
+        </section>
+    </main>
     <script src="./js/menu.js"></script>
 </body>
 
