The second section or phone section's desing was made for the mobile device width

--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
                 <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
         </section>
+
+        <section class="phone flex modifier">
+            <h2 class="phone_title">Comprar desde el movil</h2>
+            <img src="./img/fondo.jpg" alt="phone" class="phone_img">
+            <div class="description">
+                <h3 class="number">1</h3>
+                <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
+            </div>
+            <div class="description">
+                <h3 class="number">2</h3>
+                <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
+            </div>
+            <div class="description">
+                <h3 class="number">3</h3>
+                <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
+            </div>
+        </section>
     </main>
     <script src="./js/menu.js"></script>
 </body>
