The third section's desing was made for the mobile device width

--- a/index.html
+++ b/index.html
@@ -76,6 +76,39 @@
                 <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
             </div>
         </section>
+
+        <section class="sucursales flex modifier">
+            <h2 class="sucursales_title">Nuestras Sucursales</h2>
+            <div class="stores">
+                <h3 class="store_title">Tienda 1</h3>
+                <img src="./img/store.jpg" alt="store" class="store_img">
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+            </div>
+            <div class="stores">
+                <h3 class="store_title">Tienda 2</h3>
+                <img src="./img/store.jpg" alt="store" class="store_img">
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+            </div>
+            <div class="stores">
+                <h3 class="store_title">Tienda 3</h3>
+                <img src="./img/store.jpg" alt="store" class="store_img">
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+            </div>
+            <div class="stores">
+                <h3 class="store_title">Tienda 4</h3>
+                <img src="./img/store.jpg" alt="store" class="store_img">
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+                <li class="store_list icon-asterisk">Manizales</li>
+            </div>
+
+        </section>
     </main>
     <script src="./js/menu.js"></script>
 </body>
