The testimonials section's desing was made for the mobile device width

--- a/index.html
+++ b/index.html
@@ -107,7 +107,25 @@
                 <li class="store_list icon-asterisk">Manizales</li>
                 <li class="store_list icon-asterisk">Manizales</li>
             </div>
+        </section>
 
+        <section class="customers flex modifier">
+            <h2 class="customers_title">Opinion de Clientes</h2>
+            <div class="testimonials">
+                <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
+                <img src="./img/profile1.jpg" alt="profile image" class="profile_img">
+                <h3 class="profile_name">Vanesa Perez</h3>
+            </div>
+            <div class="testimonials">
+                <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
+                <img src="./img/profile2.jpg" alt="profile image" class="profile_img">
+                <h3 class="profile_name">Vanesa Perez</h3>
+            </div>
+            <div class="testimonials">
+                <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
+                <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
+                <h3 class="profile_name">Vanesa Perez</h3>
+            </div>
         </section>
     </main>
     <script src="./js/menu.js"></script>
