The footer section's desing was made for the mobile device width and some general styles was updated.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="headboard flex modifier">
-            <div class="logo"><img src="./img/images.png" alt="logo" style="width: 100px;"></div>
+            <div class="logo"><img src="./img/logo 1.png" alt="logo" style="width: 100px;"></div>
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
@@ -36,33 +36,33 @@
     </header>
 
     <main>
-        <section class="featured flex modifier">
-            <h1 class="featured_title">Bienvenido</h1>
+        <section class="main flex modifier">
+            <h1 class="main_title">Bienvenido</h1>
             <div class="promo">
                 <span class="icon-cutlery"></span>
-                <h2 class="title_promo">Comida Saludable</h2>
-                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+                <h2 class="promo_title">Nuestras especialidades</h2>
+                <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
             <div class="promo">
                 <span class="icon-asterisk"></span>
-                <h2 class="title_promo">Comida Saludable</h2>
-                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+                <h2 class="promo_title">Especialmente para tí</h2>
+                <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
             <div class="promo">
                 <span class="icon-heart"></span>
-                <h2 class="title_promo">Comida Saludable</h2>
-                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+                <h2 class="promo_title">Comida Saludable</h2>
+                <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
             <div class="promo">
                 <span class="icon-lightbulb-o"></span>
-                <h2 class="title_promo">Comida Saludable</h2>
-                <p class="text_promo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
+                <h2 class="promo_title">Animate a probarlos</h2>
+                <p class="promo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequatur officia illum, tempora, nostrum eum quo repellendus, ad esse quibusdam maxime iste reiciendis vel eos veniam. Facilis ducimus illo cumque.</p>
             </div>
         </section>
 
         <section class="phone flex modifier">
             <h2 class="phone_title">Comprar desde el movil</h2>
-            <img src="./img/fondo.jpg" alt="phone" class="phone_img">
+            <img src="./img/phone.jpeg" alt="phone" class="phone_img">
             <div class="description">
                 <h3 class="number">1</h3>
                 <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
@@ -77,8 +77,8 @@
             </div>
         </section>
 
-        <section class="sucursales flex modifier">
-            <h2 class="sucursales_title">Nuestras Sucursales</h2>
+        <section class="branch_office flex modifier">
+            <h2 class="branch_office_title">Nuestras Sucursales</h2>
             <div class="stores">
                 <h3 class="store_title">Tienda 1</h3>
                 <img src="./img/store.jpg" alt="store" class="store_img">
@@ -119,15 +119,36 @@
             <div class="testimonials">
                 <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
                 <img src="./img/profile2.jpg" alt="profile image" class="profile_img">
-                <h3 class="profile_name">Vanesa Perez</h3>
+                <h3 class="profile_name">David Lozada</h3>
             </div>
             <div class="testimonials">
                 <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
                 <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
-                <h3 class="profile_name">Vanesa Perez</h3>
+                <h3 class="profile_name">Dahiana Morales</h3>
             </div>
         </section>
     </main>
+
+    <footer class="pie flex modifier">
+        <div class="pie_item">
+            <h2 class="pie_title">Nosotros</h2>
+            <p class="pie_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolore sed fuga nostrum sapiente ipsum fugit facere, magni earum eaque incidunt error commodi maxime minus enim non autem, accusantium corrupti!</p>
+        </div>
+        <div class="pie_item">
+            <h2 class="pie_title">Marcas Asociadas</h2>
+            <li class="pie_list"><a href="" class="pie_link">Marca 1</a></li>
+            <li class="pie_list"><a href="" class="pie_link">Marca 2</a></li>
+            <li class="pie_list"><a href="" class="pie_link">Marca 3</a></li>
+        </div>
+        <div class="pie_item">
+            <h2 class="pie_title">Enlaces de interes</h2>
+            <li class="pie_list"><a href="" class="pie_link">Administración</a></li>
+            <li class="pie_list"><a href="" class="pie_link">Teléfono</a></li>
+            <li class="pie_list"><a href="" class="pie_link">Email</a></li>
+        </div>
+        <span class="copyright">© 2021 Todos los derechos reservados. <br>Carlos Alberto Rios</span>
+    </footer>
+
     <script src="./js/menu.js"></script>
 </body>
 
