The responsive styles for tablet was made.

--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 
         <section class="phone flex modifier">
             <h2 class="phone_title">Comprar desde el movil</h2>
-            <img src="./img/phone.jpeg" alt="phone" class="phone_img">
+            <div class="description">
+                <img src="./img/phone.jpeg" alt="phone" class="phone_img">
+            </div>
             <div class="description">
                 <h3 class="number">1</h3>
                 <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
-            </div>
-            <div class="description">
+
                 <h3 class="number">2</h3>
                 <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
-            </div>
-            <div class="description">
+
                 <h3 class="number">3</h3>
                 <p class="description_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae non eos aliquid omnis nisi blanditiis ab doloremque. Nesciunt quam, distinctio perspiciatis magnam illo aspernatur accusantium veritatis vitae. Fugit, culpa modi?</p>
             </div>
@@ -110,7 +110,7 @@
         </section>
 
         <section class="customers flex modifier">
-            <h2 class="customers_title">Opinion de Clientes</h2>
+            <h2 class="customers_title">Opinión de Clientes</h2>
             <div class="testimonials">
                 <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
                 <img src="./img/profile1.jpg" alt="profile image" class="profile_img">
@@ -122,29 +122,29 @@
                 <h3 class="profile_name">David Lozada</h3>
             </div>
             <div class="testimonials">
-                <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
+                <p class="testimonials_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa consequatur nobis vitae ex deleniti earum blanditiis laboriosam sint minus sequi, explicabo, perferendis temporibus doloremque officiis mollitia esse maiores eligendi hic?</p>
                 <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
-                <h3 class="profile_name">Dahiana Morales</h3>
+                <h3 class="profile_name">Mónica Rios</h3>
             </div>
         </section>
     </main>
 
-    <footer class="pie flex modifier">
-        <div class="pie_item">
-            <h2 class="pie_title">Nosotros</h2>
-            <p class="pie_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolore sed fuga nostrum sapiente ipsum fugit facere, magni earum eaque incidunt error commodi maxime minus enim non autem, accusantium corrupti!</p>
+    <footer class="foot flex modifier">
+        <div class="foot_item">
+            <h2 class="foot_title">Nosotros</h2>
+            <p class="foot_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolore sed fuga nostrum safootnte ipsum fugit facere, magni earum eaque incidunt error commodi maxime minus enim non autem, accusantium corrupti!</p>
         </div>
-        <div class="pie_item">
-            <h2 class="pie_title">Marcas Asociadas</h2>
-            <li class="pie_list"><a href="" class="pie_link">Marca 1</a></li>
-            <li class="pie_list"><a href="" class="pie_link">Marca 2</a></li>
-            <li class="pie_list"><a href="" class="pie_link">Marca 3</a></li>
+        <div class="foot_item">
+            <h2 class="foot_title">Marcas Asociadas</h2>
+            <li class="foot_list"><a href="" class="foot_link">Marca 1</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Marca 2</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Marca 3</a></li>
         </div>
-        <div class="pie_item">
-            <h2 class="pie_title">Enlaces de interes</h2>
-            <li class="pie_list"><a href="" class="pie_link">Administración</a></li>
-            <li class="pie_list"><a href="" class="pie_link">Teléfono</a></li>
-            <li class="pie_list"><a href="" class="pie_link">Email</a></li>
+        <div class="foot_item">
+            <h2 class="foot_title">Enlaces de interes</h2>
+            <li class="foot_list"><a href="" class="foot_link">Administración</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Teléfono</a></li>
+            <li class="foot_list"><a href="" class="foot_link">Email</a></li>
         </div>
         <span class="copyright">© 2021 Todos los derechos reservados. <br>Carlos Alberto Rios</span>
     </footer>
