The responsive styles was completed.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
-                    <a href="" class="link">Inicio</a>
+                    <a href="" class="link selection">Inicio</a>
                 </li>
                 <li class="list">
                     <a href="" class="link">Nosotros</a>
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="text">
+        <div class="text modifier">
             <h1 class="title">Lo mejor <br> esta por llegar</h1>
             <a href="" class="button">Conocenos</a>
         </div>
@@ -122,7 +122,7 @@
                 <h3 class="profile_name">David Lozada</h3>
             </div>
             <div class="testimonials">
-                <p class="testimonials_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa consequatur nobis vitae ex deleniti earum blanditiis laboriosam sint minus sequi, explicabo, perferendis temporibus doloremque officiis mollitia esse maiores eligendi hic?</p>
+                <p class="testimonials_text">Hola agonia, de ahora en adelante empezare a cobrara por mis servicios como asesor de imagen en tus diseños, pues esto me hace venir desde la pm y es un esfuerzo muy grande asi como uso de mi valioso tiempo. chauuu</p>
                 <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
                 <h3 class="profile_name">Mónica Rios</h3>
             </div>
