The About Us page was realiced

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurante</title>
+    <title>Inicio - Restaurante</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fonts.css">
 </head>
@@ -16,10 +16,10 @@
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
-                    <a href="" class="link selection">Inicio</a>
+                    <a href="./index.html" class="link selection">Inicio</a>
                 </li>
                 <li class="list">
-                    <a href="" class="link">Nosotros</a>
+                    <a href="./about-us.html" class="link">Nosotros</a>
                 </li>
                 <li class="list">
                     <a href="" class="link">Productos</a>
@@ -110,21 +110,23 @@
         </section>
 
         <section class="customers flex modifier">
-            <h2 class="customers_title">Opinión de Clientes</h2>
-            <div class="testimonials">
-                <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
-                <img src="./img/profile1.jpg" alt="profile image" class="profile_img">
-                <h3 class="profile_name">Vanesa Perez</h3>
-            </div>
-            <div class="testimonials">
-                <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
-                <img src="./img/profile2.jpg" alt="profile image" class="profile_img">
-                <h3 class="profile_name">David Lozada</h3>
-            </div>
-            <div class="testimonials">
-                <p class="testimonials_text">Hola agonia, de ahora en adelante empezare a cobrara por mis servicios como asesor de imagen en tus diseños, pues esto me hace venir desde la pm y es un esfuerzo muy grande asi como uso de mi valioso tiempo. chauuu</p>
-                <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
-                <h3 class="profile_name">Mónica Rios</h3>
+            <h2 class="customers_title">Opiniones de Clientes</h2>
+            <div class="flex modifier">
+                <div class="testimonials">
+                    <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
+                    <img src="./img/profile1.jpg" alt="profile image" class="profile_img">
+                    <h3 class="profile_name">Vanesa Perez</h3>
+                </div>
+                <div class="testimonials">
+                    <p class="testimonials_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero corrupti saepe eum reiciendis dignissimos iusto doloremque debitis, dolore cupiditate id perferendis nam non dicta quaerat aut explicabo velit quo?</p>
+                    <img src="./img/profile2.jpg" alt="profile image" class="profile_img">
+                    <h3 class="profile_name">David Lozada</h3>
+                </div>
+                <div class="testimonials">
+                    <p class="testimonials_text">Hola agonia, de ahora en adelante empezare a cobrar por mis servicios como asesor de imagen en tus diseños, pues esto me hace venir desde la pm y es un esfuerzo muy grande asi como uso de mi valioso tiempo. chauuu</p>
+                    <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
+                    <h3 class="profile_name">Mónica Rios</h3>
+                </div>
             </div>
         </section>
     </main>
