The Products page was made

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros - Restaurante</title>
+    <title>Contacto - Restaurante</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
     <link rel="stylesheet" href="./css/fonts.css">
@@ -20,13 +20,13 @@
                     <a href="./index.html" class="link">Inicio</a>
                 </li>
                 <li class="list">
-                    <a href="./about-us.html" class="link selection">Nosotros</a>
+                    <a href="./about-us.html" class="link">Nosotros</a>
                 </li>
                 <li class="list">
                     <a href="./products.html" class="link">Productos</a>
                 </li>
                 <li class="list">
-                    <a href="./contact.html" class="link">Contacto</a>
+                    <a href="./contact.html" class="link selection">Contacto</a>
                 </li>
             </ul>
         </nav>
