--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
         <nav class="headboard flex modifier">
-            <div class="logo"><img src="./img/logo 1.png" alt="logo" style="width: 100px;"></div>
+            <div class="logo"><img src="./img/logo.png" alt="logo" class="logo_img"></div>
             <div class="stripe"><span class="icon-bars" id="menu_button"></span></div>
             <ul class="menu" id="menu">
                 <li class="list">
@@ -22,10 +22,10 @@
                     <a href="./about-us.html" class="link">Nosotros</a>
                 </li>
                 <li class="list">
-                    <a href="" class="link">Productos</a>
+                    <a href="./products.html" class="link">Productos</a>
                 </li>
                 <li class="list">
-                    <a href="" class="link">Contacto</a>
+                    <a href="./contact.html" class="link">Contacto</a>
                 </li>
             </ul>
         </nav>
