The Contact Page was made

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contacto - Restaurante</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/about-us.css">
+    <link rel="stylesheet" href="./css/contact.css">
     <link rel="stylesheet" href="./css/fonts.css">
 </head>
 
@@ -33,32 +34,32 @@
     </header>
 
     <main>
-        <section class="about_us">
-            <div class="flex modifier">
-                <h1 class="about_us_title">Sobre Nosotros</h1>
-                <p class="about_us_text">
-                    <img src="./img/chef.jpg" alt="about us image" class="about_us_img"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est ipsa blanditiis, cum pariatur totam repudiandae atque nemo, quae commodi quos non vel beatae, distinctio
-                    sit corporis minus! Impedit, explicabo quaerat tempore accusantium totam vel excepturi, pariatur quod reiciendis sint facere consectetur doloremque consequatur officiis esse, nisi magni iste! Alias dolor excepturi, laborum velit sed
-                    quaerat minima facilis eligendi inventore necessitatibus asperiores exercitationem quasi neque modi, ad veniam.<br> Quam, pariatur at magni tenetur culpa, repellat modi ullam nisi officia, sunt fugiat autem sint deleniti quibusdam
-                    dolore vitae deserunt suscipit esse ab tempora soluta in a! Itaque sint delectus, saepe cum laudantium quisquam dignissimos dolor rem, ipsum impedit velit corporis beatae, dolorum dolores quo cumque odio culpa.<br> Odit, et quas! Aut
-                    corporis voluptate ea blanditiis pariatur illo, eius tenetur deserunt ratione itaque saepe ab vero atque at id voluptatibus laudantium reiciendis quidem praesentium.<br> Natus, praesentium. Nesciunt omnis quae quibusdam dolor optio
-                    sapiente accusantium, dolores accusamus magnam laborum distinctio repellendus cum sint. Laudantium ad enim nostrum voluptatibus qui id quisquam sunt esse quo quod voluptates, explicabo sit ducimus ex omnis atque blanditiis pariatur,
-                    necessitatibus eaque. Accusamus sed fugiat, nesciunt quos exercitationem quod ut aperiam nisi numquam quibusdam veniam cum blanditiis culpa rem quis?</p>
+        <section class="contact flex modifier">
+            <h1 class="contact_title">Contactanos</h1>
+            <div class="contact_info">
+                <h2 class="info_title">Nuestros Contactos</h2>
+                <p class="info_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem similique modi officiis voluptas ipsam expedita at exercitationem provident velit, asperiores facere dignissimos. Reiciendis eveniet ab ratione, velit nobis expedita quo!</p>
+                <a href="" class="info_link icon-whatsapp">Escribenos a Whatsapp</a>
+                <a href="" class="info_link icon-mobile">Llamanos</a>
+                <a href="" class="info_link icon-envelope">Envianos un Email</a>
+            </div>
+            <div class="contact_info">
+                <form class="contact_form" action="">
+                    <label for="" class="contact_label">Nombre</label>
+                    <input type="text" class="contact_input">
+                    <label for="" class="contact_label">Teléfono</label>
+                    <input type="text" class="contact_input">
+                    <label for="" class="contact_label">Email</label>
+                    <input type="text" class="contact_input">
+                    <label for="" class="contact_label">Mensaje</label>
+                    <textarea name="" id="" cols="30" rows="10" class="contact_input"></textarea>
+
+                    <input type="submit" value="Enviar" class="contact_buton">
+                </form>
             </div>
         </section>
-        <secion class="history">
-            <div class="flex modifier">
-                <h1 class="history_title">Nuestra Historia</h1>
-                <p class="history_text"><img src="./img/chef2.jpg" alt="history image" class="history_img">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti adipisci harum facere ullam! Quam nesciunt maxime harum totam id at tempora rem nam nemo, officia sit
-                    inventore fugit facere sint labore earum esse error magnam libero unde! Minima similique tempore facilis quisquam saepe omnis, vero animi officia quasi obcaecati, aliquid veritatis corporis laboriosam error suscipit cum.<br> Accusamus
-                    pariatur a alias eveniet sint accusantium fugit dolorum deleniti dignissimos nam. Eos quod ea numquam dicta, aut ullam perferendis modi praesentium mollitia ratione fugit.<br> Deserunt laboriosam ratione minus! Atque at non maxime
-                    asperiores esse natus dolor culpa, deserunt nihil mollitia vero neque tempora illo accusantium distinctio veniam quam possimus temporibus? Deserunt ex deleniti natus quasi distinctio sapiente laudantium neque molestias dolor in nobis,
-                    tenetur, porro iusto rerum magni minus maxime aliquid dolore autem consequuntur sed! Dolor illo quo ipsum ab! Voluptates dignissimos aliquid exercitationem ratione adipisci, assumenda nesciunt quis hic nihil molestias natus nemo blanditiis
-                    quisquam ipsum non recusandae tenetur quasi.<br> Inventore vitae exercitationem delectus! Cum, illo! Est, molestiae odit laboriosam sit reiciendis accusamus repellendus delectus esse minima sapiente iusto quasi impedit explicabo perferendis
-                    officia quaerat pariatur inventore quae dolorem cupiditate, eum facere similique nobis aliquam? Asperiores quae alias labore! Aperiam, repellat repudiandae.</p>
-            </div>
-        </secion>
     </main>
+
     <footer class="foot flex modifier">
         <div class="foot_item">
             <h2 class="foot_title">Nosotros</h2>
