--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h3 class="profile_name">David Lozada</h3>
                 </div>
                 <div class="testimonials">
-                    <p class="testimonials_text">Hola agonia, de ahora en adelante empezare a cobrar por mis servicios como asesor de imagen en tus diseños, pues esto me hace venir desde la pm y es un esfuerzo muy grande asi como uso de mi valioso tiempo. chauuu</p>
+                    <p class="testimonials_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas porro corrupti molestias doloremque nostrum quae, natus error quia maiores autem cupiditate in cum numquam vel vero provident iure, culpa rerum.</p>
                     <img src="./img/profile3.jpg" alt="profile image" class="profile_img">
                     <h3 class="profile_name">Mónica Rios</h3>
                 </div>
