The Readme file was updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
         <div class="text modifier">
-            <h1 class="title">Lo mejor <br> esta por llegar</h1>
+            <h1 class="title">Lo mejor <br> está por llegar</h1>
             <a href="" class="button">Conocenos</a>
         </div>
     </header>
